<resources>
    <string name="app_name">XOXO</string>
    <string name="register_text">Don\'t have an account? <font color="#9C9C9C">Register now</font></string>
    <string name="terms_text">By signing up, you agree with our <font color="#9C9C9C">Terms and Conditions</font></string>
    <string name="logo">Logo</string>
    <string name="learn_more">Helping movie lovers explore films and cinemas with ease</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password"><font color="#9C9C9C">Forgot Password?</font></string>
    <string name="gmail">gmail</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="already_have_account">Already have an account? <font color="#9C9C9C">Login now</font></string>
    <string name="welcome_message">Hi, %1$s! 👋</string>
    <string name="default_web_client_id">779644763730-annf99vefdfreatedbh60q4hddffl0l1.apps.googleusercontent.com</string>
</resources>
